style: make sure link is legible

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,7 @@ body {
     padding: 1rem;
 }
 
-.message {
+.message, .message a {
     color: #fff;
 }
 
